# advent-of-code-2021

./: .gitignore  .gitmodules  Cargo.toml  README.md
day01/: Day01.hs  Day01.py  Day01.rs  Day01.scala  spec.sh
day02/: Day02.hs  Day02.py  Day02.rs  Day02.scala  spec.sh
day03/: Day03.hs  Day03.py  Day03.rs  Day03.scala  spec.sh
day04/: Day04.hs  Day04.py  Day04.rs  Day04.scala  spec.sh
day05/: Day05.hs  Day05.py  Day05.rs  Day05.scala  spec.sh
day06/: Day06.hs  Day06.py  Day06.rs  Day06.scala  spec.sh
day07/: Day07.hs  Day07.py  Day07.rs  Day07.scala  spec.sh
day08/: Day08.hs  Day08.py  Day08.rs  Day08.scala  spec.sh
day09/: Day09.hs  Day09.py  Day09.rs  Day09.scala  spec.sh
day10/: Day10.hs  Day10.py  Day10.rs  Day10.scala  spec.sh
day11/: Day11.hs  Day11.py  Day11.rs  Day11.scala  spec.sh
day12/: Day12.hs  Day12.py  Day12.rs  Day12.scala  spec.sh
day13/: Day13.hs  Day13.py  Day13.rs  Day13.scala  spec.sh
day14/: Day14.hs  Day14.py  Day14.rs  Day14.scala  spec.sh
day15/: Day15.hs  Day15.py  Day15.rs  Day15.scala  spec.sh
day16/: Day16.hs  Day16.py  Day16.rs  Day16.scala  spec.sh
day17/: Day17.hs  Day17.py  Day17.rs  Day17.scala  spec.sh
day18/: Day18.hs  Day18.py  Day18.rs  Day18.scala  spec.sh
day19/: Day19.hs  Day19.py  Day19.rs  Day19.scala  spec.sh
day20/: Day20.hs  Day20.py  Day20.rs  Day20.scala  spec.sh
day21/: Day21.hs  Day21.py  Day21.rs  Day21.scala  spec.sh
day22/: Day22.hs  Day22.py  Day22.rs  Day22.scala  spec.sh
day23/: Day23.hs  Day23.py  Day23.rs  Day23.scala  spec.sh
day24/: Day24.py  spec.sh
(+7 files in other folders)
